<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reload"
        android:icon="@drawable/ic_autorenew_white_24dp"
        android:orderInCategory="100"
        android:title="@string/strReload"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_black_24dp"
        android:orderInCategory="100"
        android:title="@string/str"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_log"
        android:icon="@drawable/ic_person_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_sign_in"
        app:showAsAction="always" />
</menu>