<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_mode_edit_black_24dp"
        android:orderInCategory="100"
        android:title="@string/str"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_black_24dp"
        android:orderInCategory="100"
        android:title="@string/str"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_asistidos"
        android:icon="@drawable/ic_group_black_24dp"
        android:orderInCategory="100"
        android:title="@string/strAsistidos"
        app:showAsAction="always" />
</menu>