<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="es.plang.ruben.plang.ActividadVista"
    tools:showIn="@layout/activity_actividad">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvFecha2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginRight="25dp"
                android:layout_marginTop="@dimen/text_margin"
                android:text="@string/strFechaPrueba" />

            <TextView
                android:id="@+id/label_asistentes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="@dimen/text_margin"
                android:text="@string/strAsitentes"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvVisitas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:layout_marginRight="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_weight="1"
                android:text="@string/strVisitas" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_hora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/strLabelHora"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvHora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/strHora" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_precio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strPrecio"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPrecio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/text_margin"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    android:layout_weight="1"
                    android:text="@string/strPrecio2" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/label_lugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:text="@string/strLugarLabel"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginTop="5dp"
            android:text="@string/strLugar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/organizador_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin"
                android:text="@string/strOrganizadorLabel"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvOrganizador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginRight="@dimen/text_margin"
                android:layout_weight="1"
                android:text="@string/strOrganizador" />
        </LinearLayout>

        <TextView
            android:id="@+id/label_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_weight="1"
            android:text="@string/strLabelDescription"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_weight="1"
            android:text="@string/large_text" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btAsistentes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:src="@drawable/ic_remove_red_eye_white_24dp"
            android:visibility="gone" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
